CHANGES IN VERSION 1.11.0
------------------------
* Updated clusterTCR() to function with single-cell objects

CHANGES IN VERSION 1.10.1
------------------------
* Rebasing for the purposes of bioconductor version

CHANGES IN VERSION 1.7.5
------------------------
* Fixed combineBCR() to allow for non-related sequences

CHANGES IN VERSION 1.7.4
------------------------
* Added checkContigs() function to quantify the percentages of NA values by genes or sequences
* Fix issue with clonalDiversity() and skipping boots
* Fixing underlying assumptions with clonalBias()
* Adding reads variable to parseAIRR
* Adding exportClones to clonalNetwork() to isolate clones shared across identities.
* Fixing handling of samples parameter in combine contain functions
* removed need to relevel the cloneType factor after combineExpression()
* set up lapply() for combineBCR() and clusterTCR() - no more pairwise distance matrix calculation
* loadContigs() support for data.frames or lists of contigs
* Added examples for loadContigs() to test function
* Removed requirement for T cell type designation - will combine A/B and G/D simultaneously
* Updated combineBCR() to chunk nucleotide edit distance calculations by V gene and give option to skip edit distance calculation with call.related.clones = FALSE
* Updated clusterTCR() to use lvcompare() function and base edit distances of V gene usage. 


CHANGES IN VERSION 1.7.3
------------------------
* Fix misspellings for parse contains functions
* Optimize WAT3R and 10x loadContigs()
* Remove combineTRUST4 - superseded by loadContigs()
* Added support of TRUST4 for combineBCR()
* Added support for BD in loadContigs()
* loadContigs() TRUST4 parsing allows for all NA values in a chain
* combineExpression() group.by = NULL will now collapse the whole list. 


CHANGES IN VERSION 1.7.2
------------------------
* ClonalDiversity() now has skip.boots to stop bootstrapping and downsampling


CHANGES IN VERSION 1.7.0
------------------------