@@ -27,7 +27,6 @@ export(loadContigs)
 export(occupiedscRepertoire)
 export(quantContig)
 export(scatterClonotype)
-export(stripBarcode)
 export(subsetContig)
 export(vizGenes)
 exportClasses(StartracOut)
